# lman-deafening

./: .gitignore  .pre-commit-config.yaml  README.md  env.yml  practice.py  pyproject.toml
analysis/: convert_adbit2volts.py  entropy.py  entropy_spk_corr.py  entropy_spk_corr_v2.py  ff_spk_corr.py  firing_rates.py  fundamental_frequency.py  gap_duration.py  psd_similarity.py  raster.py  raster_bout.py  raster_syllable.py  song_fr_cross_corr.py  song_triggered_spk.py  spk_corr.py  syllable_duration.py  syllable_network.py  unit_profile.py  waveform.py
notebooks/: cv_fr.py  fundamental_frequency.ipynb  pcc_sig_prop.py  song_features.ipynb
notebooks/sql/: firing_rates.ipynb  fundamental_frequency.ipynb  pairwise_crosscorr.ipynb  song_fr_cross_corr.ipynb  song_spk_corr.ipynb  syllable_duration.ipynb  syllable_sequence.ipynb  unit_profile.ipynb
results/: cluster_info.ipynb  connection.ipynb  dj_local_conf.json  firing_rates.ipynb  pairwise_crosscorr.ipynb  preprocessing.ipynb  song_triggerd_spk.ipynb  syllable_sequence2.ipynb  unit_profile.ipynb  waveform.ipynb  weighted_entropy.csv
src/lman-deafening/analysis/: Untitled.ipynb  corr_pcc_song_features.py  fano_factor.py  raster_bout.py  raster_syllable.py  song_triggered_spk.py  sparseness.py  syllable_duration.py
src/lman-deafening/scripts/: entropy.py  song.py  song_fr_cross_corr.py  syllable_network.py
src/lman_deafening/analysis/: entropy_spk_corr.py  gap_duration.py  isi.py  psd_similarity.py  raster_syllable_shuffle.py  raster_syllable_window.py  song_degradation.py
src/lman_deafening/utils/: plotting.py
util/: plot.py
