[build-system]
requires = ["setuptools>=62.0", "wheel>=0.37"]
build-backend = "setuptools.build_meta"

[project]
name = "lman_deafening"
version = "0.0.0"
description = "Electrophysiology recording in LMAN under auditory perturbation"
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [{ name = "Jaerong Ahn", email = "jaerongahn@gmail.com" }]
dependencies = [
    "datajoint-utilities @ git+https://github.com/datajoint-company/datajoint-utilities",
    "datajoint>=0.13.7",
    "graphviz",
    "graphviz",
    "ipython",
    "ipykernel",
    "matplotlib",
    "networkx<2.8.3",
    "numpy",
    "pandas",
    "plotly",
    "pydantic",
    "pyfinch @ git+https://github.com/JaerongA/pyfinch.git",
    "scikit-learn",
    "scipy",
    "seaborn",
]

[project.optional-dependencies]
dev = ["black", "isort", "flake8", "pre-commit", "pytest"]

[tool.setuptools]
package-data = { "*" = ["*.pyi", "py.typed"] }

[tool.setuptools.packages.find]
where = ["src"]
namespaces = false

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-rA"
testpaths = ["tests"]

[tool.black]
line-length = 88
target-version = ["py310"]
color = false
include = '^src/.*\.py$'

[tool.isort]
profile = "black"

ignore = ["**/*.ipynb", "notebooks"]
reportMissingImports = true
